# high_perf_cpp_practice

./: README.md
chap2/: CMakeLists.txt  README.md
chap2/include/: auto.hpp  bad_set_data.hpp  const_auto.hpp  forwarding_auto.hpp  fundamental_compound_type_class.hpp  propagate_const.hpp  rule_of_five.hpp  rule_of_zero.hpp  rvalue_lvalue.hpp  rvo.hpp  temp_member_func.hpp
chap2/include/utils/: auto_helpers.hpp
chap2/src/: auto.cpp  const_auto.cpp  forwarding_auto.cpp  fundamental_compound.cpp  main  main.cpp  pierre_playground.cpp  rvalue_lvalue.cpp
chap2/src/main.dSYM/Contents/Resources/DWARF/: main
chap2/src/main.dSYM/Contents/Resources/Relocations/aarch64/: main.yml
chap2/src/utils/: auto_helpers.cpp
